# signalgui

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  configure.sh
cmake/: defines.cmake
ext/qcustomplot/: CMakeLists.txt
scripts/: siggen.py
src/: CMakeLists.txt  app.cpp  app.h  core.h  filesystem.cpp  filesystem.hpp  main.cpp  plot2d.cpp  plot2d.h  plot_widget.cpp  plot_widget.h  widget.cpp  widget.h
src/ui/: app.ui  main.ui
